--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -526,6 +526,8 @@
 	<string name="share">Share</string>
 	<string name="no_language_to_select">Language Option Not Available</string>
 	<string name="ride_complete">Ride Completed</string>
+	<string name="no_not_verified">Phone Number not verified</string>
+	<string name="resend_OTP">Resend OTP</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
