--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -518,7 +518,8 @@
     <string name="JUGNOO">JUGNOO</string>
     <string name="no_language_to_select">Language Option Not Available</string>
     <string name="ride_complete">రైడ్ పూర్తయింది</string>
-
+    <string name="no_not_verified">Phone Number not verified</string>
+    <string name="resend_OTP">Resend OTP</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
