--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -528,6 +528,7 @@
 	<string name="ride_complete">Ride Completed</string>
 	<string name="no_not_verified">Phone Number not verified</string>
 	<string name="resend_OTP">Resend OTP</string>
+	<string name="miss_call_otp">Give a Miss Call</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
