--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -462,6 +462,7 @@
     <string name="ride_complete">સવારી પૂર્ણ </string>
     <string name="no_not_verified">Phone Number not verified</string>
     <string name="resend_OTP">Resend OTP</string>
+    <string name="miss_call_otp">Give a Miss Call</string>
 
 
     <string-array name="CountryCodes" >
