--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -520,6 +520,7 @@
     <string name="ride_complete">రైడ్ పూర్తయింది</string>
     <string name="no_not_verified">Phone Number not verified</string>
     <string name="resend_OTP">Resend OTP</string>
+    <string name="miss_call_otp">Give a Miss Call</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
