--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -538,7 +538,7 @@
 <item>54,AR</item>
 <item>374,AM</item>
 <item>297,AW</item>
-<item>61,AU</item>rideInfo.statusString)
+<item>61,AU</item>
 <item>43,AT</item>
 <item>994,AZ</item>
 <item>973,BH</item>
