--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -465,6 +465,7 @@
     <string name="ride_complete">যাএা সমাপ্ত হল ।</string>
     <string name="no_not_verified">Phone Number not verified</string>
     <string name="resend_OTP">Resend OTP</string>
+    <string name="return_reasons">Reasons of Return</string>
 
 
     <string-array name="CountryCodes" >
