--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -520,6 +520,7 @@
 	<string name="ride_complete">सवारी पूरा</string>
 	<string name="no_not_verified">Phone Number not verified</string>
 	<string name="resend_OTP">ओटीपी पुन: भेजें</string>
+	<string name="return_reasons">Reasons of Return</string>
 
 
 	<string-array name="CountryCodes" >
