--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -466,6 +466,7 @@
     <string name="ride_complete">റൈഡ് പൂർത്തിയായി</string>
     <string name="no_not_verified">Phone Number not verified</string>
     <string name="resend_OTP">Resend OTP</string>
+    <string name="return_reasons">Reasons of Return</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
