--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -467,6 +467,8 @@
     <string name="no_not_verified">Phone Number not verified</string>
     <string name="resend_OTP">Resend OTP</string>
     <string name="return_reasons">Reasons of Return</string>
+    <string name="collected">Collected</string>
+    <string name="Returned">Returned</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
