--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -521,6 +521,8 @@
 	<string name="no_not_verified">Phone Number not verified</string>
 	<string name="resend_OTP">ओटीपी पुन: भेजें</string>
 	<string name="return_reasons">Reasons of Return</string>
+	<string name="collected">Collected</string>
+	<string name="Returned">Returned</string>
 
 
 	<string-array name="CountryCodes" >
