feature_dodo: fragments linked together

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -523,6 +523,8 @@
 	<string name="return_reasons">Reasons of Return</string>
 	<string name="collected">Collected</string>
 	<string name="Returned">Returned</string>
+	<string name="please_confirm_cash_taken">Please confirm you have taken cash</string>
+	<string name="confirm">Confirm</string>
 
 
 	<string-array name="CountryCodes" >
