--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -463,6 +463,10 @@
     <string name="no_not_verified">Phone Number not verified</string>
     <string name="resend_OTP">Resend OTP</string>
     <string name="miss_call_otp">Give a Miss Call</string>
+    <string name="give_missed_call_dialog_text">Give us a missed call and we will verify your
+        identity
+    </string>
+    <string name="give_misscall_to_verify">Give Miss Call to Verify</string>
 
 
     <string-array name="CountryCodes" >
