--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -467,9 +467,7 @@
     <string name="no_not_verified">Phone Number not verified</string>
     <string name="resend_OTP">Resend OTP</string>
     <string name="miss_call_otp">Give a Miss Call</string>
-    <string name="give_missed_call_dialog_text">Give us a missed call and we will verify your
-        identity
-    </string>
+    <string name="give_missed_call_dialog_text">നിങ്ങൾ ഞങ്ങൾക്ക് ഒരു മിസ്ഡ് കോൾ നൽകിയാൽ  നിങ്ങളുടെ ഐഡൻറിറ്റി ഞങ്ങൾ പരിശോധിക്കാം</string>
     <string name="give_misscall_to_verify">Give Miss Call to Verify</string>
     <string-array name="CountryCodes" >
         <item>93,AF</item>
