--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -468,6 +468,7 @@
     <string name="miss_call_otp">Give a Miss Call</string>
     <string name="give_missed_call_dialog_text">আমাক এটা মিচ কল দিয়ক আৰু আমি আপোনাৰ পৰিচয় নিচ্চিত কৰিম ।</string>
     <string name="give_misscall_to_verify">Give Miss Call to Verify</string>
+    <string name="please_press_here">Please Press Here</string>
 
 
     <string-array name="CountryCodes" >
