--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -523,6 +523,7 @@
 	<string name="miss_call_otp">Give a Miss Call</string>
 	<string name="give_missed_call_dialog_text">हमें एक मिस कॉल दें और हम आपकी पहचान सत्यापित करेंगे |</string>
 	<string name="give_misscall_to_verify">Give Miss Call to Verify</string>
+	<string name="please_press_here">Please Press Here</string>
 
 
 	<string-array name="CountryCodes" >
