--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -469,6 +469,7 @@
     <string name="miss_call_otp">Give a Miss Call</string>
     <string name="give_missed_call_dialog_text">ଆମକୁ ଗୋଟେ ମିସକଲ ଦିଅନ୍ତୁ ଅମେ ଅପଣଂକ ପରିଚୟ ଜାନ୍ଚ କରିବୁ</string>
     <string name="give_misscall_to_verify">Give Miss Call to Verify</string>
+    <string name="please_press_here">Please Press Here</string>
 
 
     <string-array name="CountryCodes" >
