--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -493,6 +493,8 @@
     <string name="confirm">Confirm</string>
     <string name="start_delivery">Start Delivery</string>
     <string name="deliveries">Deliveries</string>
+    <string name="pending">Pending</string>
+    <string name="cancelled">Cancelled</string>
 
 
     <string-array name="CountryCodes" >
