--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -551,6 +551,8 @@
     <string name="confirm">Confirm</string>
     <string name="start_delivery">Start Delivery</string>
     <string name="deliveries">Deliveries</string>
+    <string name="pending">Pending</string>
+    <string name="cancelled">Cancelled</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
