feature_dodo: delivery info list complete, current tab created

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -495,6 +495,7 @@
     <string name="deliveries">Deliveries</string>
     <string name="pending">Pending</string>
     <string name="cancelled">Cancelled</string>
+    <string name="current">Current</string>
 
 
     <string-array name="CountryCodes" >
