--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -471,6 +471,7 @@
     <string name="deliveries">Deliveries</string>
     <string name="pending">Pending</string>
     <string name="cancelled">Cancelled</string>
+    <string name="current">Current</string>
 
 
     <string-array name="CountryCodes" >
