--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -553,6 +553,7 @@
     <string name="deliveries">Deliveries</string>
     <string name="pending">Pending</string>
     <string name="cancelled">Cancelled</string>
+    <string name="current">Current</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
