--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -529,6 +529,7 @@
     <string name="deliveries">Deliveries</string>
     <string name="pending">Pending</string>
     <string name="cancelled">Cancelled</string>
+    <string name="current">Current</string>
 
 
     <string-array name="CountryCodes" >
