--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -530,6 +530,8 @@
     <string name="pending">Pending</string>
     <string name="cancelled">Cancelled</string>
     <string name="current">Current</string>
+    <string name="to_no_colon">To</string>
+    <string name="address">Address</string>
 
 
     <string-array name="CountryCodes" >
