--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -478,6 +478,8 @@
     <string name="current">Current</string>
     <string name="to_no_colon">To</string>
     <string name="address">Address</string>
+    <string name="get_directions">Get Directions</string>
+    <string name="delivered">Delivered</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
