--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -480,6 +480,7 @@
     <string name="address">Address</string>
     <string name="get_directions">Get Directions</string>
     <string name="delivered">Delivered</string>
+    <string name="delivery_on">Delivery ON</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
