--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -535,6 +535,10 @@
     <string name="get_directions">Get Directions</string>
     <string name="delivered">Delivered</string>
     <string name="delivery_on">Delivery ON</string>
+    <string name="delivery_is_over">Delivery is Over</string>
+    <string name="orders_delivered">Orders Delivered</string>
+    <string name="orders_returned">Orders Returned</string>
+    <string name="rate_your_vendor">Rate Your Vendor</string>
 
 
     <string-array name="CountryCodes" >
