--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -511,6 +511,11 @@
     <string name="start_the_ride">Start the ride</string>
     <string name="deliver_order_number">Deliver order no. %s</string>
     <string name="all_orders_have_been_delivered">All Orders have been Delivered</string>
+    <string name="returned">Returned</string>
+    <string name="start_delivery_text">Are you sure you want to start Delivery?</string>
+    <string name="delivery_id">Delivery Id</string>
+    <string name="deliver">Deliver</string>
+    <string name="Return">Return</string>
 
 
     <string-array name="CountryCodes" >
